--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,46 +1,51 @@
-name: Build Xalist
+# GitHub Actions Workflow: flutter_build.yml
+
+name: Flutter Build
 
 on:
   push:
     branches:
-      - main  # Change this to your main branch name
-  workflow_dispatch:  # Allow manual triggering
+      - main
+  workflow_dispatch:
 
 jobs:
-  build_sign_and_distribute:
+  build:
     runs-on: ubuntu-latest
 
-    steps:    
-    - name: Checkout Flutter App Repository
-      uses: actions/checkout@v2
-      with:
-        ref: master  # Change this to the branch containing your Flutter app
-    - name: set up java
-      uses: actions/setup-java@v3
-      with: 
-       distribution: 'zulu'
-       java-version: '12.x'
-       cache: 'gradle'
-       
-    - name: Set up Flutter...
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.27.x'  # Change this to your desired Flutter version
-        cache: true
-    - name: Install Dependencies
-      run: |
-       flutter pub get
-    
-    - name: Build APK
-      run: |
-       #flutter build apk --release --split-per-abi
-       flutter build apk --release
-       ls ./build/app/outputs/flutter-apk
-    - name: Upload Release
-      uses: ncipollo/release-action@v1
-      with:
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v2
+
+      # Set up Java 11
+      - name: Set up Java 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+
+      # Set up Flutter (Update Flutter to 3.27.3 to support Dart 3.3.0)
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.27.3'  # Update Flutter version here
+
+      # Install dependencies
+      - name: Install dependencies
+        run: flutter pub get
+
+      # Build APK (Release version)
+      - name: Build APK
+        run: flutter build apk --release 
+
+      # List output APK files
+      - name: List APK Files
+        run: ls ./build/app/outputs/flutter-apk
+
+      # Upload release APK
+      - name: Upload Release APK
+        uses: ncipollo/release-action@v1
+        with:
           allowUpdates: true
           artifactErrorsFailBuild: true
           artifacts: "build/app/outputs/flutter-apk/*.apk"
-          token: ${{ secrets.GITHUB_TOKEN }}   
-          tag: '0.0.1'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: '1.0.3'
