--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
+          distribution: 'adoptopenjdk'
 
       # Set up Flutter (Update Flutter to 3.27.3 to support Dart 3.3.0)
       - name: Set up Flutter
