--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,12 @@ jobs:
         uses: actions/checkout@v2
 
       # Set up Java 11
-      - name: Set up Java 11
+      - name: Set up Java
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'adoptopenjdk'
-
+          distribution: 'zulu'
+          java-version: '12.x'
+          
       # Set up Flutter (Update Flutter to 3.27.3 to support Dart 3.3.0)
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
