--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.27.3'  # Update Flutter version here
+          flutter-version: '3.19.0'  # Update Flutter version here
 
       # Install dependencies
       - name: Install dependencies
@@ -39,13 +39,7 @@ jobs:
 
       # Build APK (Release version)
       - name: Build APK
-        run: |
-         flutter pub upgrade
-         flutter doctor --android-licenses
-         cd android
-         ./gradlew wrapper --gradle-version 7.6 --distribution-type bin
-         cd ..
-         flutter build apk --release
+        run: flutter build apk --release
 
       # List output APK files
       - name: List APK Files
